--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -136,6 +136,8 @@
     <string name="background_color">Barva pozadí</string>
     <string name="text_color">Barva písma</string>
     <string name="primary_color">Primární barva</string>
+    <string name="foreground_color">Foreground color</string>
+    <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">Obnovit výchozí</string>
     <string name="theme">Motiv</string>
     <string name="changing_color_description">Změna barvy změní motiv na Vlastní</string>
