--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -136,6 +136,8 @@
     <string name="background_color">Warna Latar</string>
     <string name="text_color">Warna Teks</string>
     <string name="primary_color">Warna Utama</string>
+    <string name="foreground_color">Foreground color</string>
+    <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">Kembalikan Ke Awal</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Mengubah Warna Akan Membuat Beralih Ke Tema Kustom</string>
