--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -136,6 +136,8 @@
     <string name="background_color">Fono spalva</string>
     <string name="text_color">Teksto spalva</string>
     <string name="primary_color">Pirminë spalva</string>
+    <string name="foreground_color">Foreground color</string>
+    <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">Atstatyti</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Keièiant temà bus perjungta á pasirinktinæ temà</string>
