--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -137,6 +137,8 @@
     <string name="background_color">Farba pozadia</string>
     <string name="text_color">Farba textu</string>
     <string name="primary_color">Primárna farba</string>
+    <string name="foreground_color">Farba popredia</string>
+    <string name="app_icon_color">Farba spúšťacej ikonky apky</string>
     <string name="restore_defaults">Obnoviť predvolené</string>
     <string name="theme">Téma</string>
     <string name="changing_color_description">Zmena farby spôsobí prepnutie na Vlastnú tému</string>
