--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -136,6 +136,8 @@
     <string name="background_color">Arkaplan rengi</string>
     <string name="text_color">Metin rengi</string>
     <string name="primary_color">Ana renk</string>
+    <string name="foreground_color">Foreground color</string>
+    <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">Varsayılanları geri yükle</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Bir rengi değiştirdiğinizde Özel temaya geçeceksiniz</string>
