--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -135,6 +135,8 @@
     <string name="background_color">背景顏色</string>
     <string name="text_color">文字顏色</string>
     <string name="primary_color">主體顏色</string>
+    <string name="foreground_color">Foreground color</string>
+    <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">恢復預設</string>
     <string name="theme">主題</string>
     <string name="changing_color_description">改變顏色將切換成[自訂]主題</string>
