--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -137,6 +137,8 @@
     <string name="background_color">Boja pozadine</string>
     <string name="text_color">Boja teksta</string>
     <string name="primary_color">Primarna boja</string>
+    <string name="foreground_color">Foreground color</string>
+    <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">Vrati zadano</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Promjenom boje, prelazi se na Prilagođenu temu</string>
