--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -136,6 +136,8 @@
     <string name="background_color">Bakgrunnsfarge</string>
     <string name="text_color">Tekstfarge</string>
     <string name="primary_color">Primærfarge</string>
+    <string name="foreground_color">Foreground color</string>
+    <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">Gjenopprett standard</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Endring av farge vil gjøre at det skiftes til Tilpasset tema</string>
