--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -136,6 +136,8 @@
     <string name="background_color">Background color</string>
     <string name="text_color">Text color</string>
     <string name="primary_color">Primary color</string>
+    <string name="foreground_color">Foreground color</string>
+    <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">Restore defaults</string>
     <string name="theme">Theme</string>
     <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
