--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -269,6 +269,10 @@
     <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
     <string name="reminder_warning">Please make sure the reminders work properly before relying on them. They could misbehave due to system restrictions related to battery saving.</string>
 
+    <!-- Alarms -->
+    <string name="snooze">Snooze</string>
+    <string name="dismiss">Dismiss</string>
+
     <!-- Settings -->
     <string name="settings">Indstillinger</string>
     <string name="customize_colors">Rediger farver</string>
@@ -290,6 +294,8 @@
     <string name="use_24_hour_time_format">Brug 24-timers format</string>
     <string name="sunday_first">Søndag første ugedag</string>
     <string name="widgets">Widgets</string>
+    <string name="use_same_snooze">Brug altid samme snooze-tid</string>
+    <string name="snooze_time">Snooze-tid</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighed</string>
