--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -268,6 +268,10 @@
     <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
     <string name="reminder_warning">Please make sure the reminders work properly before relying on them. They could misbehave due to system restrictions related to battery saving.</string>
 
+    <!-- Alarms -->
+    <string name="snooze">Retrasar</string>
+    <string name="dismiss">Dismiss</string>
+
     <!-- Settings -->
     <string name="settings">Ajustes</string>
     <string name="customize_colors">Cambiar colores</string>
@@ -289,6 +293,8 @@
     <string name="use_24_hour_time_format">Use 24-hour time format</string>
     <string name="sunday_first">Start week on Sunday</string>
     <string name="widgets">Widgets</string>
+    <string name="use_same_snooze">Always use same snooze time</string>
+    <string name="snooze_time">Snooze time</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilidad</string>
