--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -269,6 +269,10 @@
     <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
     <string name="reminder_warning">Please make sure the reminders work properly before relying on them. They could misbehave due to system restrictions related to battery saving.</string>
 
+    <!-- Alarms -->
+    <string name="snooze">Uitstellen</string>
+    <string name="dismiss">Dismiss</string>
+
     <!-- Settings -->
     <string name="settings">Instellingen</string>
     <string name="customize_colors">Kleuren aanpassen</string>
@@ -290,6 +294,8 @@
     <string name="use_24_hour_time_format">24-uursformaat gebruiken</string>
     <string name="sunday_first">Week op zondag beginnen</string>
     <string name="widgets">Widgets</string>
+    <string name="use_same_snooze">Altijd dezelfde interval voor uitstellen gebruiken</string>
+    <string name="snooze_time">Snooze time</string>
 
     <!-- Setting sections -->
     <string name="visibility">Opmaak</string>
