--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -268,6 +268,10 @@
     <string name="alarm_warning">依靠鬧鐘功能之前，請先確認是否正常運作，有可能因為省電相關的系統限制而導致失靈。</string>
     <string name="reminder_warning">依靠提醒功能之前，請先確認是否正常運作，有可能因為省電相關的系統限制而導致失靈。</string>
 
+    <!-- Alarms -->
+    <string name="snooze">延遲</string>
+    <string name="dismiss">Dismiss</string>
+
     <!-- Settings -->
     <string name="settings">設定</string>
     <string name="customize_colors">自訂顏色</string>
@@ -289,6 +293,8 @@
     <string name="use_24_hour_time_format">使用24小時制</string>
     <string name="sunday_first">每周由星期日開始</string>
     <string name="widgets">小工具</string>
+    <string name="use_same_snooze">總是使用相同延遲間隔</string>
+    <string name="snooze_time">Snooze time</string>
 
     <!-- Setting sections -->
     <string name="visibility">可見度</string>
